footer spacing issue fixes

--- a/styles/layouts/_footer.scss
+++ b/styles/layouts/_footer.scss
@@ -19,16 +19,17 @@
     // }
   }
   &__top {
-    padding: 110px 0;
+    padding: 30px 0;
     border-bottom: 1px solid rgba(255, 255, 255, 0.1);
     display: flex;
-    align-items: baseline;
+    // align-items: baseline;
     @media (max-width: 780px) {
       flex-direction: column;
     }
   }
   &__mobileCol {
     display: flex;
+    padding-top: 30px;
     flex: 4;
     width: 100%;
     @media (max-width: 414px) {
@@ -101,7 +102,7 @@
     }
   }
   &__middle {
-    padding: 50px 0 18px 0;
+    padding: 18px 0;
     display: flex;
     align-items: center;
     justify-content: space-between;
